# idata_telegram_bot

./: README.md  find_idata_randevu.ipynb  find_idata_randevu.py  pyproject.toml  telegram_bot.py
