[tool.poetry]
name = "idata-alert"
version = "0.1.0"
description = ""
authors = ["Furkan Gul <frkangul@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
selenium = "4.18.1"
ipykernel = "6.29.3"
python-telegram-bot = {extras = ["ext"], version = "^21.0.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
